// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider Component renders horizontal with title correctly 1`] = `
<DocumentFragment>
  <span>
    Text mocked 1
  </span>
  <div
    class="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-center ant-divider-plain"
    role="separator"
  >
    <span
      class="ant-divider-inner-text"
    >
      Some text
    </span>
  </div>
  <span>
    Text mocked 2
  </span>
</DocumentFragment>
`;

exports[`Divider Component renders horizontal without title correctly 1`] = `
<DocumentFragment>
  <span>
    Text mocked 1
  </span>
  <div
    class="ant-divider ant-divider-horizontal ant-divider-plain"
    role="separator"
  />
  <span>
    Text mocked 2
  </span>
</DocumentFragment>
`;

exports[`Divider Component renders vertical correctly 1`] = `
<DocumentFragment>
  <span>
    Text mocked 1
  </span>
  <div
    class="ant-divider ant-divider-vertical ant-divider-plain"
    role="separator"
  />
  <span>
    Text mocked 2
  </span>
</DocumentFragment>
`;

exports[`Divider Component renders with dashed line 1`] = `
<DocumentFragment>
  <span>
    Text mocked 1
  </span>
  <div
    class="ant-divider ant-divider-horizontal ant-divider-dashed ant-divider-plain"
    role="separator"
  />
  <span>
    Text mocked 2
  </span>
</DocumentFragment>
`;

exports[`Divider Component renders with plain text 1`] = `
<DocumentFragment>
  <span>
    Text mocked 1
  </span>
  <div
    class="ant-divider ant-divider-horizontal ant-divider-plain"
    role="separator"
  />
  <span>
    Text mocked 2
  </span>
</DocumentFragment>
`;
